--- a/anesthesia.html
+++ b/anesthesia.html
@@ -62,20 +62,24 @@
           </section>
         </aside>
         <div class="main-center">
-          <h1>怒りアメ</h1>
+          <h1>麻酔アメ</h1>
           <section class="ame clearfix">
             <div class="ame-txt">
-              <img src="images/red.png" alt="怒りアメ"class="ame-image">
+              <img src="images/green.png" alt="麻酔アメ"class="ame-image">
               <h2 class="icon">概要</h2>
-              <p>現在、一番怒っていることを行ってしまいます。
-                たまには我慢せず言ってストレス発散してみましょう！</p>
-              <h2 class="icon">注意事項</h2>
-              <p>効果時間は食べている間のみです。</p>
+              <p>一時的に痛みを感じなくなります。
+              <br>痛みを忘れて快適な生活を送りましょう！</p>
+              <h2 class="icon">味</h2>
+              <p>メロン</p>
               <h2 class="icon">成分</h2>
-              <p>怒り100％</p>
+              <p>・痛み無効70％　・元気30％</p>
               <h2 class="icon">値段</h2>
-              <p>1個：120円</p>
+              <p>1個：500円（税込み）</p>
+              <h2 class="icon">注意事項</h2>
+              <p>効果時間は24時間です。
+              <br>連続での使用は禁止です。次回使用には、12時間以上空けてください。</p>
             </div>
+
             <p class="btn"><a href="buy.html">購入</a></p>
           </section>
         </div>
@@ -89,8 +93,6 @@
       <small>(C)2021 Candy-studio.</small>
     </footer>
     <!-- footer終わり-->
-
-
 
   </body>
 </html>
