--- a/buy.html
+++ b/buy.html
@@ -10,7 +10,7 @@
     <link href="css/style.css" rel="stylesheet">
     <title>Fancy Candy</title>
   </head>
-  <body id="top">
+  <body id="product">
 
     <!-- header始まり-->
     <header>
@@ -18,24 +18,30 @@
       <a href="top.html">
       <img src="images/logo.png" alt="Fancy Candy"></a>
       </div>
-      <nav>
-        <ul class="global-nav">
-          <li><a href="about.html">Fancy Candyとは</a></li>
-          <li><a href="product.html">商品紹介</a></li>
-          <li><a href="news.html">ニュース</a></li>
-          <li><a href="voice.html">お客様の声</a></li>
-          <li><a href="event.html">イベント</a></li>
-        </ul>
-      </nav>
+      <div class="navButton">
+        <span class="navButton-line"></span>
+        <span class="navButton-line"></span>
+        <span class="navButton-line"></span>
+      </div>
     </header>
     <!-- header終わり-->
+
+    <nav>
+      <ul class="menu">
+        <li><a href="about.html">Fancy Candyとは</a></li>
+        <li><a href="product.html">商品紹介</a></li>
+        <li><a href="news.html">ニュース</a></li>
+        <li><a href="voice.html">お客様の声</a></li>
+        <li><a href="event.html">イベント</a></li>
+      </ul>
+    </nav>
 
     <!-- wrap始まり-->
     <div id="wrap">
       <div class="content">
-        <h1>夢のような体験</h1>
-        <p>皆様の『したい』を実現します！
-          <br>※このWebサイトは、架空のアメ専門店です。</p>
+        <h1>ご購入ありがとうございます！</h1>
+        <p>実際に商品を食べることはできませんが、想像して楽しむことはできましたか？
+          <br>引き続き、下記のボタンから他の商品をお楽しみください。</p>
         <p class="btn"><a href="product.html">商品紹介</a></p>
       </div>
     </div>
