--- a/classic.html
+++ b/classic.html
@@ -42,42 +42,36 @@
               <p class="btn2">自慢アメ</a></p></li>
               <li><a href="angry.html"><img src="images/red.png"alt="">
               <p class="btn2">怒りアメ</a></p></li>
-              <li><a href="cry.html"><img src="images/purple.png"alt="">
-              <p class="btn2">涙アメ</a></p></li>
-              <li><a href="cry.html"><img src="images/orange.png"alt="">
-              <p class="btn2">笑いアメ</a></p></li>
               <li><a href="cry.html"><img src="images/blue.png"alt="">
               <p class="btn2">涙アメ</a></p></li>
+              <li><a href="smile.html"><img src="images/orange.png"alt="">
+              <p class="btn2">笑いアメ</a></p></li>
+              <li><a href="cry.html"><img src="images/ame.png"alt="">
+              <p class="btn2">喜怒哀楽セット</a></p></li>
             </ul>
           </section>
           <section id="2">
             <h2 class="icon">一休みシリーズ</h2>
             <ul class="clearfix classic-list">
-              <li><a href="sleep.html"><img src="images/pink.png"alt="">
+              <li><a href="sleep.html"><img src="images/purple.png"alt="">
               <p class="btn2">眠りアメ</a></p></li>
-              <li><a href="cry.html"><img src="images/green.png"alt="">
+              <li><a href="fine.html"><img src="images/orange.png"alt="">
               <p class="btn2">元気アメ</a></p></li>
-              <li><a href="cry.html"><img src="images/blue.png"alt="">
+              <li><a href="refresh.html"><img src="images/green.png"alt="">
               <p class="btn2">リフレッシュアメ</a></p></li>
-              <li><a href="cry.html"><img src="images/orange.png"alt="">
-              <p class="btn2">涙アメ</a></p></li>
-              <li><a href="cry.html"><img src="images/red.png"alt="">
-              <p class="btn2">涙アメ</a></p></li>
+              <li><a href="nap.html"><img src="images/blue.png"alt="">
+              <p class="btn2">仮眠アメ</a></p></li>
+              <li><a href="set2.html"><img src="images/ame.png"alt="">
+              <p class="btn2">一休みセット</a></p></li>
             </ul>
           </section>
           <section id="3">
-            <h2 class="icon">遊ぶシリーズ</h2>
+            <h2 class="icon">気分転換シリーズ</h2>
             <ul class="clearfix classic-list">
-              <li><a href="cry.html"><img src="images/orange.png"alt="">
+              <li><a href="positive.html"><img src="images/pink.png"alt="">
               <p class="btn2">ポジティブアメ</a></p></li>
-              <li><a href="cry.html"><img src="images/purple.png"alt="">
+              <li><a href="negative.html"><img src="images/purple.png"alt="">
               <p class="btn2">ネガティブアメ</a></p></li>
-              <li><a href="cry.html"><img src="images/red.png"alt="">
-              <p class="btn2">涙アメ</a></p></li>
-              <li><a href="cry.html"><img src="images/blue.png"alt="">
-              <p class="btn2">涙アメ</a></p></li>
-              <li><a href="cry.html"><img src="images/pink.png"alt="">
-              <p class="btn2">涙アメ</a></p></li>
             </ul>
           </section>
         </div>
@@ -87,7 +81,7 @@
             <ul>
               <li><a href="classic.html"#1>喜怒哀楽シリーズ</a></li>
               <li><a href="classic.html"#2>一休みシリーズ</a></li>
-              <li><a href="classic.html"#3>遊ぶシリーズ</a></li>
+              <li><a href="classic.html"#3>気分転換シリーズ</a></li>
             </ul>
           </section>
           <section>
@@ -101,9 +95,8 @@
           <section>
             <h2>期間限定商品</h2>
             <ul>
-              <li><a href="season.html"#1>梅雨限定</a></li>
-              <li><a href="season.html"#2>夏休み限定</a></li>
-              <li><a href="season.html"#3>ハロウィン限定</a></li>
+              <li><a href="season.html"#1>冬季限定</a></li>
+              <li><a href="season.html"#2>クリスマス限定</a></li>
             </ul>
           </section>
         </aside>
