--- a/fly.html
+++ b/fly.html
@@ -62,20 +62,25 @@
           </section>
         </aside>
         <div class="main-center">
-          <h1>怒りアメ</h1>
+          <h1>飛行アメ</h1>
           <section class="ame clearfix">
             <div class="ame-txt">
-              <img src="images/red.png" alt="怒りアメ"class="ame-image">
+              <img src="images/blue.png" alt="飛行アメ"class="ame-image">
               <h2 class="icon">概要</h2>
-              <p>現在、一番怒っていることを行ってしまいます。
-                たまには我慢せず言ってストレス発散してみましょう！</p>
-              <h2 class="icon">注意事項</h2>
-              <p>効果時間は食べている間のみです。</p>
+              <p>空を自由に飛べるようになります。</p>
+              <h2 class="icon">味</h2>
+              <p>ソーダ</p>
               <h2 class="icon">成分</h2>
-              <p>怒り100％</p>
+              <p>・飛行90％　・温かさ10％</p>
               <h2 class="icon">値段</h2>
-              <p>1個：120円</p>
+              <p>1個：500円（税込み）</p>
+              <h2 class="icon">注意事項</h2>
+              <p>効果時間は食べている間のみです。
+              <br>連続での使用は禁止のため、着陸に注意してください。
+            　次回飛行は、着陸後1時間以上経ってからです。
+          　　上空は寒いので厚着してからの飛行がおすすめです。</p>
             </div>
+
             <p class="btn"><a href="buy.html">購入</a></p>
           </section>
         </div>
@@ -89,8 +94,6 @@
       <small>(C)2021 Candy-studio.</small>
     </footer>
     <!-- footer終わり-->
-
-
 
   </body>
 </html>
