--- a/jiman.html
+++ b/jiman.html
@@ -42,7 +42,7 @@
             <ul>
               <li><a href="classic.html"#1>喜怒哀楽シリーズ</a></li>
               <li><a href="classic.html"#2>一休みシリーズ</a></li>
-              <li><a href="classic.html"#3>遊ぶシリーズ</a></li>
+              <li><a href="classic.html"#3>気分転換シリーズ</a></li>
             </ul>
           </section>
           <section>
@@ -56,25 +56,29 @@
           <section>
             <h2>期間限定商品</h2>
             <ul>
-              <li><a href="season.html"#1>梅雨限定</a></li>
-              <li><a href="season.html"#2>夏休み限定</a></li>
-              <li><a href="season.html"#3>ハロウィン限定</a></li>
+              <li><a href="season.html"#1>冬季限定</a></li>
+              <li><a href="season.html"#2>クリスマス限定</a></li>
             </ul>
           </section>
         </aside>
         <div class="main-center">
           <h1>自慢アメ</h1>
-          <section class="jiman clearfix">
-            <div class="jiman-txt">
+          <section class="ame clearfix">
+            <div class="ame-txt">
+              <img src="images/pink.png" alt="自慢アメ"class="ame-image">
               <h2 class="icon">概要</h2>
               <p>一番直近の自慢したい出来事を１つ勝手に話してしまいます。
-    アメのせいだといって、堂々と自慢できるチャンスですよ♪</p>
+              <br>アメのせいだといって、堂々と自慢できるチャンスですよ♪</p>
+              <h2 class="icon">味</h2>
+              <p>いちご</p>
+              <h2 class="icon">成分</h2>
+              <p>喜び100％</p>
+              <h2 class="icon">値段</h2>
+              <p>1個：120円（税込み）</p>
               <h2 class="icon">注意事項</h2>
               <p>効果時間は食べている間のみです。</p>
-              <h2 class="icon">値段</h2>
-              <p>10個入り：120円</p>
             </div>
-            <img src="images/pink.png" alt="自慢アメ"class="jiman-image">
+
             <p class="btn"><a href="buy.html">購入</a></p>
           </section>
         </div>
@@ -88,8 +92,6 @@
       <small>(C)2021 Candy-studio.</small>
     </footer>
     <!-- footer終わり-->
-
-
 
   </body>
 </html>
