--- a/nap.html
+++ b/nap.html
@@ -62,20 +62,26 @@
           </section>
         </aside>
         <div class="main-center">
-          <h1>怒りアメ</h1>
+          <h1>仮眠アメ</h1>
           <section class="ame clearfix">
             <div class="ame-txt">
-              <img src="images/red.png" alt="怒りアメ"class="ame-image">
+              <img src="images/blue.png" alt="仮眠アメ"class="ame-image">
               <h2 class="icon">概要</h2>
-              <p>現在、一番怒っていることを行ってしまいます。
-                たまには我慢せず言ってストレス発散してみましょう！</p>
-              <h2 class="icon">注意事項</h2>
-              <p>効果時間は食べている間のみです。</p>
+              <p>どんな忙しいときでも睡眠は欠かせません。
+              <br>食べるとすぐに眠りにつき、1粒につき10分の眠りにつきます。
+            　1粒で回復する体力は半日分です。</p>
+              <h2 class="icon">味</h2>
+              <p>ソーダ</p>
               <h2 class="icon">成分</h2>
-              <p>怒り100％</p>
+              <p>・睡眠70％　・元気30％</p>
               <h2 class="icon">値段</h2>
-              <p>1個：120円</p>
+              <p>1個：150円（税込み）</p>
+              <h2 class="icon">注意事項</h2>
+              <p>効果は食べ終わるまでにでます。
+              <br>連続での服用は身体に悪影響を及ぼす可能性がありますので、
+            　1日1粒までの摂取にしてください。</p>
             </div>
+
             <p class="btn"><a href="buy.html">購入</a></p>
           </section>
         </div>
@@ -89,8 +95,6 @@
       <small>(C)2021 Candy-studio.</small>
     </footer>
     <!-- footer終わり-->
-
-
 
   </body>
 </html>
