--- a/negative.html
+++ b/negative.html
@@ -62,20 +62,25 @@
           </section>
         </aside>
         <div class="main-center">
-          <h1>怒りアメ</h1>
+          <h1>ネガティブアメ</h1>
           <section class="ame clearfix">
             <div class="ame-txt">
-              <img src="images/red.png" alt="怒りアメ"class="ame-image">
+              <img src="images/purple.png" alt="ネガティブアメ"class="ame-image">
               <h2 class="icon">概要</h2>
-              <p>現在、一番怒っていることを行ってしまいます。
-                たまには我慢せず言ってストレス発散してみましょう！</p>
-              <h2 class="icon">注意事項</h2>
-              <p>効果時間は食べている間のみです。</p>
+              <p>しっかりと反省することが必要なこともあります。
+              <br>現実をよく見て自分のマイナス面を振り返り
+              今後の自分をよりよくしていきましょう。</p>
+              <h2 class="icon">味</h2>
+              <p>ぶどう</p>
               <h2 class="icon">成分</h2>
-              <p>怒り100％</p>
+              <p>・マイナス思考80％　・元気20％</p>
               <h2 class="icon">値段</h2>
-              <p>1個：120円</p>
+              <p>1個：150円（税込み）</p>
+              <h2 class="icon">注意事項</h2>
+              <p>効果時間は1時間です。
+              <br>ポジティブアメと同時に食べると効果がなくなります。</p>
             </div>
+
             <p class="btn"><a href="buy.html">購入</a></p>
           </section>
         </div>
@@ -89,8 +94,6 @@
       <small>(C)2021 Candy-studio.</small>
     </footer>
     <!-- footer終わり-->
-
-
 
   </body>
 </html>
