--- a/santa.html
+++ b/santa.html
@@ -62,20 +62,24 @@
           </section>
         </aside>
         <div class="main-center">
-          <h1>怒りアメ</h1>
+          <h1>サンタクロースアメ</h1>
           <section class="ame clearfix">
             <div class="ame-txt">
-              <img src="images/red.png" alt="怒りアメ"class="ame-image">
+              <img src="images/pink.png" alt="サンタクロースアメ"class="ame-image">
               <h2 class="icon">概要</h2>
-              <p>現在、一番怒っていることを行ってしまいます。
-                たまには我慢せず言ってストレス発散してみましょう！</p>
-              <h2 class="icon">注意事項</h2>
-              <p>効果時間は食べている間のみです。</p>
+              <p>一夜だけ本物のサンタクロースになれます。</p>
+              <h2 class="icon">味</h2>
+              <p>はっか</p>
               <h2 class="icon">成分</h2>
-              <p>怒り100％</p>
+              <p>サンタクロース100％</p>
               <h2 class="icon">値段</h2>
-              <p>1個：120円</p>
+              <p>1個：1000円（税込み）</p>
+              <h2 class="icon">注意事項</h2>
+              <p>効果は12月24日24時~27時です。
+              <br>24日の24時までに摂取していれば自動的に変身するため
+            　注意してください。</p>
             </div>
+
             <p class="btn"><a href="buy.html">購入</a></p>
           </section>
         </div>
@@ -89,8 +93,6 @@
       <small>(C)2021 Candy-studio.</small>
     </footer>
     <!-- footer終わり-->
-
-
 
   </body>
 </html>
