--- a/season.html
+++ b/season.html
@@ -38,48 +38,23 @@
             大量生産しない商品もありますので、興味のあるものはすぐ購入されることを
             お勧めします！</p>
           <section id="1">
-            <h2 class="icon">梅雨シリーズ</h2>
+            <h2 class="icon">冬季限定シリーズ</h2>
             <ul class="clearfix classic-list">
-              <li><a href="jiman.html"><img src="images/red.png"alt="">
-              <p class="btn2">カッパアメ</a></p></li>
-              <li><a href="jiman.html"><img src="images/green.png"alt="">
-              <p class="btn2">虹アメ</a></p></li>
-              <li><a href="jiman.html"><img src="images/purple.png"alt="">
-              <p class="btn2">おばけアメ</a></p></li>
-              <li><a href="jiman.html"><img src="images/orange.png"alt="">
-              <p class="btn2">おばけアメ</a></p></li>
-              <li><a href="jiman.html"><img src="images/blue.png"alt="">
-              <p class="btn2">おばけアメ</a></p></li>
+              <li><a href="kairo.html"><img src="images/red.png"alt="">
+              <p class="btn2">かいろアメ</a></p></li>
+              <li><a href="slip.html"><img src="images/blue.png"alt="">
+              <p class="btn2">滑らないアメ</a></p></li>
+              <li><a href="moist.html"><img src="images/green.png"alt="">
+              <p class="btn2">保湿アメ</a></p></li>
             </ul>
           </section>
           <section id="2">
-            <h2 class="icon">夏休みシリーズ</h2>
+            <h2 class="icon">クリスマスシリーズ</h2>
             <ul class="clearfix classic-list">
-              <li><a href="jiman.html"><img src="images/pink.png"alt="">
-              <p class="btn2">おばけアメ</a></p></li>
-              <li><a href="jiman.html"><img src="images/green.png"alt="">
-              <p class="btn2">おばけアメ</a></p></li>
-              <li><a href="jiman.html"><img src="images/blue.png"alt="">
-              <p class="btn2">おばけアメ</a></p></li>
-              <li><a href="jiman.html"><img src="images/orange.png"alt="">
-              <p class="btn2">おばけアメ</a></p></li>
-              <li><a href="jiman.html"><img src="images/red.png"alt="">
-              <p class="btn2">おばけアメ</a></p></li>
-            </ul>
-          </section>
-          <section id="3">
-            <h2 class="icon">ハロウィンシリーズ</h2>
-            <ul class="clearfix classic-list">
-              <li><a href="jiman.html"><img src="images/orange.png"alt="">
-              <p class="btn2">おばけアメ</a></p></li>
-              <li><a href="jiman.html"><img src="images/purple.png"alt="">
-              <p class="btn2">いたづらアメ</a></p></li>
-              <li><a href="jiman.html"><img src="images/red.png"alt="">
-              <p class="btn2">おばけアメ</a></p></li>
-              <li><a href="jiman.html"><img src="images/blue.png"alt="">
-              <p class="btn2">おばけアメ</a></p></li>
-              <li><a href="jiman.html"><img src="images/pink.png"alt="">
-              <p class="btn2">おばけアメ</a></p></li>
+              <li><a href="santa.html"><img src="images/pink.png"alt="">
+              <p class="btn2">サンタクロースアメ</a></p></li>
+              <li><a href="gussuri.html"><img src="images/purple.png"alt="">
+              <p class="btn2">ぐっすりアメ</a></p></li>
             </ul>
           </section>
         </div>
@@ -89,7 +64,7 @@
             <ul>
               <li><a href="classic.html"#1>喜怒哀楽シリーズ</a></li>
               <li><a href="classic.html"#2>一休みシリーズ</a></li>
-              <li><a href="classic.html"#3>遊ぶシリーズ</a></li>
+              <li><a href="classic.html"#3>気分転換シリーズ</a></li>
             </ul>
           </section>
           <section>
@@ -103,9 +78,8 @@
           <section>
             <h2>期間限定商品</h2>
             <ul>
-              <li><a href="season.html"#1>梅雨限定</a></li>
-              <li><a href="season.html"#2>夏休み限定</a></li>
-              <li><a href="season.html"#3>ハロウィン限定</a></li>
+              <li><a href="season.html"#1>冬季限定</a></li>
+              <li><a href="season.html"#2>クリスマス限定</a></li>
             </ul>
           </section>
         </aside>
