--- a/special.html
+++ b/special.html
@@ -39,46 +39,38 @@
           <section id="1">
             <h2 class="icon">夢シリーズ</h2>
             <ul class="clearfix classic-list">
-              <li><a href="jiman.html"><img src="images/red.png"alt="">
+              <li><a href="clear.html"><img src="images/purple.png"alt="">
               <p class="btn2">透明アメ</a></p></li>
-              <li><a href="jiman.html"><img src="images/green.png"alt="">
+              <li><a href="move.html"><img src="images/red.png"alt="">
               <p class="btn2">瞬間移動アメ</a></p></li>
-              <li><a href="jiman.html"><img src="images/purple.png"alt="">
+              <li><a href="anesthesia.html"><img src="images/green.png"alt="">
               <p class="btn2">麻酔アメ</a></p></li>
-              <li><a href="jiman.html"><img src="images/orange.png"alt="">
+              <li><a href="fly.html"><img src="images/blue.png"alt="">
               <p class="btn2">飛行アメ</a></p></li>
-              <li><a href="jiman.html"><img src="images/blue.png"alt="">
+              <li><a href="love.html"><img src="images/pink.png"alt="">
               <p class="btn2">恋アメ</a></p></li>
             </ul>
           </section>
           <section id="2">
             <h2 class="icon">スキンケアシリーズ</h2>
             <ul class="clearfix classic-list">
-              <li><a href="jiman.html"><img src="images/pink.png"alt="">
+              <li><a href="beauty.html"><img src="images/orange.png"alt="">
               <p class="btn2">美容アメ</a></p></li>
-              <li><a href="jiman.html"><img src="images/green.png"alt="">
+              <li><a href="full.html"><img src="images/green.png"alt="">
               <p class="btn2">満腹アメ</a></p></li>
-              <li><a href="jiman.html"><img src="images/blue.png"alt="">
+              <li><a href="esthetic.html"><img src="images/purple.png"alt="">
               <p class="btn2">エステアメ</a></p></li>
-              <li><a href="jiman.html"><img src="images/orange.png"alt="">
-              <p class="btn2">変身アメ</a></p></li>
-              <li><a href="jiman.html"><img src="images/red.png"alt="">
-              <p class="btn2">自慢アメ</a></p></li>
             </ul>
           </section>
           <section id="3">
             <h2 class="icon">勉強シリーズ</h2>
             <ul class="clearfix classic-list">
-              <li><a href="jiman.html"><img src="images/orange.png"alt="">
+              <li><a href="memory.html"><img src="images/blue.png"alt="">
               <p class="btn2">記憶力upアメ</a></p></li>
-              <li><a href="jiman.html"><img src="images/purple.png"alt="">
+              <li><a href="language.html"><img src="images/purple.png"alt="">
               <p class="btn2">言語完璧アメ</a></p></li>
-              <li><a href="jiman.html"><img src="images/red.png"alt="">
+              <li><a href="animal.html"><img src="images/pink.png"alt="">
               <p class="btn2">動物言語理解アメ</a></p></li>
-              <li><a href="jiman.html"><img src="images/blue.png"alt="">
-              <p class="btn2">自慢アメ</a></p></li>
-              <li><a href="jiman.html"><img src="images/pink.png"alt="">
-              <p class="btn2">自慢アメ</a></p></li>
             </ul>
           </section>
         </div>
@@ -88,7 +80,7 @@
             <ul>
               <li><a href="classic.html"#1>喜怒哀楽シリーズ</a></li>
               <li><a href="classic.html"#2>一休みシリーズ</a></li>
-              <li><a href="classic.html"#3>遊ぶシリーズ</a></li>
+              <li><a href="classic.html"#3>気分転換シリーズ</a></li>
             </ul>
           </section>
           <section>
@@ -102,9 +94,8 @@
           <section>
             <h2>期間限定商品</h2>
             <ul>
-              <li><a href="season.html"#1>梅雨限定</a></li>
-              <li><a href="season.html"#2>夏休み限定</a></li>
-              <li><a href="season.html"#3>ハロウィン限定</a></li>
+              <li><a href="season.html"#1>冬季限定</a></li>
+              <li><a href="season.html"#2>クリスマス限定</a></li>
             </ul>
           </section>
         </aside>
