--- a/animal.html
+++ b/animal.html
@@ -62,20 +62,23 @@
           </section>
         </aside>
         <div class="main-center">
-          <h1>怒りアメ</h1>
+          <h1>動物言語理解アメ</h1>
           <section class="ame clearfix">
             <div class="ame-txt">
-              <img src="images/red.png" alt="怒りアメ"class="ame-image">
+              <img src="images/pink.png" alt="動物言語理解アメ"class="ame-image">
               <h2 class="icon">概要</h2>
-              <p>現在、一番怒っていることを行ってしまいます。
-                たまには我慢せず言ってストレス発散してみましょう！</p>
-              <h2 class="icon">注意事項</h2>
-              <p>効果時間は食べている間のみです。</p>
+              <p>これを食べると動物の言葉が分かるようになります！</p>
+              <h2 class="icon">味</h2>
+              <p>りんご</p>
               <h2 class="icon">成分</h2>
-              <p>怒り100％</p>
+              <p>・動物言語理解80％　・記憶力20％</p>
               <h2 class="icon">値段</h2>
-              <p>1個：120円</p>
+              <p>1個：500円（税込み）</p>
+              <h2 class="icon">注意事項</h2>
+              <p>効果時間は12時間です。
+              <br>次回の使用は、12時間以上空けてください。</p>
             </div>
+
             <p class="btn"><a href="buy.html">購入</a></p>
           </section>
         </div>
@@ -89,8 +92,6 @@
       <small>(C)2021 Candy-studio.</small>
     </footer>
     <!-- footer終わり-->
-
-
 
   </body>
 </html>
