--- a/beauty.html
+++ b/beauty.html
@@ -62,20 +62,26 @@
           </section>
         </aside>
         <div class="main-center">
-          <h1>怒りアメ</h1>
+          <h1>美容アメ</h1>
           <section class="ame clearfix">
             <div class="ame-txt">
-              <img src="images/red.png" alt="怒りアメ"class="ame-image">
+              <img src="images/orange.png" alt="美容アメ"class="ame-image">
               <h2 class="icon">概要</h2>
-              <p>現在、一番怒っていることを行ってしまいます。
-                たまには我慢せず言ってストレス発散してみましょう！</p>
-              <h2 class="icon">注意事項</h2>
-              <p>効果時間は食べている間のみです。</p>
+              <p>ニキビやシミ、しわがなくなりもちもちで透明感のある肌になります。
+              <br>これで肌悩みとおさらばできます！</p>
+              <h2 class="icon">味</h2>
+              <p>オレンジ</p>
               <h2 class="icon">成分</h2>
-              <p>怒り100％</p>
+              <p>・美容80％　・透明感20％</p>
               <h2 class="icon">値段</h2>
-              <p>1個：120円</p>
+              <p>1個：500円（税込み）</p>
+              <h2 class="icon">注意事項</h2>
+              <p>効果は一晩寝てからでます。
+              <br>そのため摂取した日は、6時間以上の睡眠をとってください。
+            　過剰に効果がでてしまうと危険な為1日1粒までにしてください。
+          　　肌悩みを解決しますが、その肌を継続するには規則正しい生活が大切です。</p>
             </div>
+
             <p class="btn"><a href="buy.html">購入</a></p>
           </section>
         </div>
@@ -89,8 +95,6 @@
       <small>(C)2021 Candy-studio.</small>
     </footer>
     <!-- footer終わり-->
-
-
 
   </body>
 </html>
