--- a/clear.html
+++ b/clear.html
@@ -62,20 +62,25 @@
           </section>
         </aside>
         <div class="main-center">
-          <h1>怒りアメ</h1>
+          <h1>透明アメ</h1>
           <section class="ame clearfix">
             <div class="ame-txt">
-              <img src="images/red.png" alt="怒りアメ"class="ame-image">
+              <img src="images/purple.png" alt="透明アメ"class="ame-image">
               <h2 class="icon">概要</h2>
-              <p>現在、一番怒っていることを行ってしまいます。
-                たまには我慢せず言ってストレス発散してみましょう！</p>
-              <h2 class="icon">注意事項</h2>
-              <p>効果時間は食べている間のみです。</p>
+              <p>これを食べると一定時間透明になれちゃいます。
+              <br>悪用厳禁ですよ！！</p>
+              <h2 class="icon">味</h2>
+              <p>はっか</p>
               <h2 class="icon">成分</h2>
-              <p>怒り100％</p>
+              <p>・透明90％　・善意10％</p>
               <h2 class="icon">値段</h2>
-              <p>1個：120円</p>
+              <p>1個：500円（税込み）</p>
+              <h2 class="icon">注意事項</h2>
+              <p>効果時間は30分です。
+              <br>摂取は1日1粒までです。
+              それ以上摂取すると最悪の場合、透明人間から戻れなくなる可能性があります。</p>
             </div>
+
             <p class="btn"><a href="buy.html">購入</a></p>
           </section>
         </div>
@@ -89,8 +94,6 @@
       <small>(C)2021 Candy-studio.</small>
     </footer>
     <!-- footer終わり-->
-
-
 
   </body>
 </html>
