--- a/esthetic.html
+++ b/esthetic.html
@@ -62,20 +62,24 @@
           </section>
         </aside>
         <div class="main-center">
-          <h1>怒りアメ</h1>
+          <h1>エステアメ</h1>
           <section class="ame clearfix">
             <div class="ame-txt">
-              <img src="images/red.png" alt="怒りアメ"class="ame-image">
+              <img src="images/purple.png" alt="エステアメ"class="ame-image">
               <h2 class="icon">概要</h2>
-              <p>現在、一番怒っていることを行ってしまいます。
-                たまには我慢せず言ってストレス発散してみましょう！</p>
-              <h2 class="icon">注意事項</h2>
-              <p>効果時間は食べている間のみです。</p>
+              <p>全身の柔軟性を上げ、肩こりや腰痛を治します。</p>
+              <h2 class="icon">味</h2>
+              <p>はっか</p>
               <h2 class="icon">成分</h2>
-              <p>怒り100％</p>
+              <p>・柔軟80％　・美容20％</p>
               <h2 class="icon">値段</h2>
-              <p>1個：120円</p>
+              <p>1個：500円（税込み）</p>
+              <h2 class="icon">注意事項</h2>
+              <p>効果は一晩寝てからでます。
+              <br>そのため摂取した日は、6時間以上の睡眠をとってください。
+            　過剰に効果がでてしまうと危険な為1日1粒までにしてください。</p
             </div>
+
             <p class="btn"><a href="buy.html">購入</a></p>
           </section>
         </div>
@@ -89,8 +93,6 @@
       <small>(C)2021 Candy-studio.</small>
     </footer>
     <!-- footer終わり-->
-
-
 
   </body>
 </html>
