--- a/full.html
+++ b/full.html
@@ -62,20 +62,26 @@
           </section>
         </aside>
         <div class="main-center">
-          <h1>怒りアメ</h1>
+          <h1>満腹アメ</h1>
           <section class="ame clearfix">
             <div class="ame-txt">
-              <img src="images/red.png" alt="怒りアメ"class="ame-image">
+              <img src="images/green.png" alt="満腹アメ"class="ame-image">
               <h2 class="icon">概要</h2>
-              <p>現在、一番怒っていることを行ってしまいます。
-                たまには我慢せず言ってストレス発散してみましょう！</p>
-              <h2 class="icon">注意事項</h2>
-              <p>効果時間は食べている間のみです。</p>
+              <p>これ1つで満腹になります。
+              <br>身体に必要な栄養分（1/2日分）が含まれているので
+            　ダイエットにも効果的です！</p>
+              <h2 class="icon">味</h2>
+              <p>はっか</p>
               <h2 class="icon">成分</h2>
-              <p>怒り100％</p>
+              <p>・満腹90％　・元気10％</p>
               <h2 class="icon">値段</h2>
-              <p>1個：120円</p>
+              <p>1個：400円（税込み）</p>
+              <h2 class="icon">注意事項</h2>
+              <p>効果時間は12時間です。
+              <br>1日1粒までのためこれのみでは1日分の栄養にはなりません。
+            　他の食事もバランスよく摂取してください。</p>
             </div>
+
             <p class="btn"><a href="buy.html">購入</a></p>
           </section>
         </div>
@@ -89,8 +95,6 @@
       <small>(C)2021 Candy-studio.</small>
     </footer>
     <!-- footer終わり-->
-
-
 
   </body>
 </html>
