--- a/gussuri.html
+++ b/gussuri.html
@@ -62,20 +62,25 @@
           </section>
         </aside>
         <div class="main-center">
-          <h1>怒りアメ</h1>
+          <h1>ぐっすりアメ</h1>
           <section class="ame clearfix">
             <div class="ame-txt">
-              <img src="images/red.png" alt="怒りアメ"class="ame-image">
+              <img src="images/purple.png" alt="ぐっすりアメ"class="ame-image">
               <h2 class="icon">概要</h2>
-              <p>現在、一番怒っていることを行ってしまいます。
-                たまには我慢せず言ってストレス発散してみましょう！</p>
-              <h2 class="icon">注意事項</h2>
-              <p>効果時間は食べている間のみです。</p>
+              <p>サンタクロースを待伏せしようと起きている悪い子もぐっすり眠ります。
+              <br>寒くて眠れない夜にもぴったりです。</p>
+              <h2 class="icon">味</h2>
+              <p>ぶどう</p>
               <h2 class="icon">成分</h2>
-              <p>怒り100％</p>
+              <p>・睡眠70％　・温かさ30％</p>
               <h2 class="icon">値段</h2>
-              <p>1個：120円</p>
+              <p>1個：200円（税込み）</p>
+              <h2 class="icon">注意事項</h2>
+              <p>効果は食べ終わるまでにでます。
+              <br>毎日の服用は身体に悪影響を及ぼす可能性がありますので、
+            　最低でも3日は空けてから服用ください。</p>
             </div>
+
             <p class="btn"><a href="buy.html">購入</a></p>
           </section>
         </div>
@@ -89,8 +94,6 @@
       <small>(C)2021 Candy-studio.</small>
     </footer>
     <!-- footer終わり-->
-
-
 
   </body>
 </html>
