--- a/love.html
+++ b/love.html
@@ -62,20 +62,25 @@
           </section>
         </aside>
         <div class="main-center">
-          <h1>怒りアメ</h1>
+          <h1>恋アメ</h1>
           <section class="ame clearfix">
             <div class="ame-txt">
-              <img src="images/red.png" alt="怒りアメ"class="ame-image">
+              <img src="images/pink.png" alt="恋アメ"class="ame-image">
               <h2 class="icon">概要</h2>
-              <p>現在、一番怒っていることを行ってしまいます。
-                たまには我慢せず言ってストレス発散してみましょう！</p>
-              <h2 class="icon">注意事項</h2>
-              <p>効果時間は食べている間のみです。</p>
+              <p>気になるあの人にアプローチする勇気が湧きます。
+              <br>自分の魅力を最大限にアピールできますよ！</p>
+              <h2 class="icon">味</h2>
+              <p>いちご</p>
               <h2 class="icon">成分</h2>
-              <p>怒り100％</p>
+              <p>・恋心60％　・勇気40％</p>
               <h2 class="icon">値段</h2>
-              <p>1個：120円</p>
+              <p>1個：500円（税込み）</p>
+              <h2 class="icon">注意事項</h2>
+              <p>効果時間は3時間です。
+              <br>好きな相手を思い浮かべながら摂取してください。
+            　相手をひとめぼれさせるものではなく、効果的に自分をアピールするものです。</p>
             </div>
+
             <p class="btn"><a href="buy.html">購入</a></p>
           </section>
         </div>
@@ -89,8 +94,6 @@
       <small>(C)2021 Candy-studio.</small>
     </footer>
     <!-- footer終わり-->
-
-
 
   </body>
 </html>
