--- a/move.html
+++ b/move.html
@@ -62,20 +62,26 @@
           </section>
         </aside>
         <div class="main-center">
-          <h1>怒りアメ</h1>
+          <h1>瞬間移動アメ</h1>
           <section class="ame clearfix">
             <div class="ame-txt">
-              <img src="images/red.png" alt="怒りアメ"class="ame-image">
+              <img src="images/red.png" alt="瞬間移動アメ"class="ame-image">
               <h2 class="icon">概要</h2>
-              <p>現在、一番怒っていることを行ってしまいます。
-                たまには我慢せず言ってストレス発散してみましょう！</p>
-              <h2 class="icon">注意事項</h2>
-              <p>効果時間は食べている間のみです。</p>
+              <p>好きな場所に移動できます。
+              <br>寝坊したときなど時間がないときにこれを食べれば移動時間が短縮できます。</p>
+              <h2 class="icon">味</h2>
+              <p>はっか</p>
               <h2 class="icon">成分</h2>
-              <p>怒り100％</p>
+              <p>・スピード80％　・透明20％</p>
               <h2 class="icon">値段</h2>
-              <p>1個：120円</p>
+              <p>1個：600円（税込み）</p>
+              <h2 class="icon">注意事項</h2>
+              <p>移動できるのは1粒につき1箇所です。
+              <br>食べている際に行きたい場所を想像してください。
+              違う場所を想像してしまうと違う箇所に行ってしまうことがあるので
+            　ご注意ください。私有地等移動できない場所もあります。</p>
             </div>
+
             <p class="btn"><a href="buy.html">購入</a></p>
           </section>
         </div>
@@ -89,8 +95,6 @@
       <small>(C)2021 Candy-studio.</small>
     </footer>
     <!-- footer終わり-->
-
-
 
   </body>
 </html>
