--- a/refresh.html
+++ b/refresh.html
@@ -62,20 +62,27 @@
           </section>
         </aside>
         <div class="main-center">
-          <h1>怒りアメ</h1>
+          <h1>リフレッシュアメ</h1>
           <section class="ame clearfix">
             <div class="ame-txt">
-              <img src="images/red.png" alt="怒りアメ"class="ame-image">
+              <img src="images/green.png" alt="リフレッシュアメ"class="ame-image">
               <h2 class="icon">概要</h2>
-              <p>現在、一番怒っていることを行ってしまいます。
-                たまには我慢せず言ってストレス発散してみましょう！</p>
-              <h2 class="icon">注意事項</h2>
-              <p>効果時間は食べている間のみです。</p>
+              <p>日々の疲れを吹っ飛ばしてくれます。
+              <br>睡眠前に摂取することで嫌な記憶を忘れることができます。
+              （完全に記憶を消すのではなく反省点等必要な記憶を整理してあなたの
+            　　足を引っ張る部分のみを箱にしまうイメージです）</p>
+              <h2 class="icon">味</h2>
+              <p>メロン</p>
               <h2 class="icon">成分</h2>
-              <p>怒り100％</p>
+              <p>・元気70％　・睡眠30％</p>
               <h2 class="icon">値段</h2>
-              <p>1個：120円</p>
+              <p>1個：150円（税込み）</p>
+              <h2 class="icon">注意事項</h2>
+              <p>効果は食べ終わってから現れます。
+              <br>連続での服用は身体に悪影響を及ぼす可能性がありますので、
+            　1日1粒までの摂取にしてください。</p>
             </div>
+
             <p class="btn"><a href="buy.html">購入</a></p>
           </section>
         </div>
@@ -89,8 +96,6 @@
       <small>(C)2021 Candy-studio.</small>
     </footer>
     <!-- footer終わり-->
-
-
 
   </body>
 </html>
