--- a/set2.html
+++ b/set2.html
@@ -62,20 +62,23 @@
           </section>
         </aside>
         <div class="main-center">
-          <h1>怒りアメ</h1>
+          <h1>一休みセット</h1>
           <section class="ame clearfix">
             <div class="ame-txt">
-              <img src="images/red.png" alt="怒りアメ"class="ame-image">
+              <img src="images/ame.png" alt="一休みセット"class="ame-image">
               <h2 class="icon">概要</h2>
-              <p>現在、一番怒っていることを行ってしまいます。
-                たまには我慢せず言ってストレス発散してみましょう！</p>
+              <p>一休みシリーズの眠りアメ・元気アメ・リフレッシュアメ・仮眠アメが
+              それぞれ2粒ずつ入っています。</p>
+              <h2 class="icon">味</h2>
+              <p>それぞれのページに記載しております。</p>
+              <h2 class="icon">成分</h2>
+              <p>それぞれのページに記載しております。</p>
+              <h2 class="icon">値段</h2>
+              <p>1000円（税込み）</p>
               <h2 class="icon">注意事項</h2>
               <p>効果時間は食べている間のみです。</p>
-              <h2 class="icon">成分</h2>
-              <p>怒り100％</p>
-              <h2 class="icon">値段</h2>
-              <p>1個：120円</p>
             </div>
+
             <p class="btn"><a href="buy.html">購入</a></p>
           </section>
         </div>
@@ -89,8 +92,6 @@
       <small>(C)2021 Candy-studio.</small>
     </footer>
     <!-- footer終わり-->
-
-
 
   </body>
 </html>
