--- a/v4.html
+++ b/v4.html
@@ -8,7 +8,7 @@
      rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
-  <body id="voice">
+  <body id="classic">
 
     <!-- header始まり-->
     <header>
@@ -25,40 +25,17 @@
           <li><a href="event.html">イベント</a></li>
         </ul>
       </nav>
+      <div class="btn-trigger" id="btn">
+            <span></span>
+            <span></span>
+            <span></span>
+      </div>
     </header>
     <!-- header終わり-->
 
     <!-- wrap始まり-->
-    <div id="wrap" class="clearfix">
+    <div id="wrap">
       <div class="content">
-        <div class="main">
-          <h1>お客様の声</h1>
-          <p>実際にご購入頂いた方の声です。買われる前の参考にしてください！</p>
-          <section class="ame clearfix">
-            <div class="ame-txt">
-              <li><img src="images/purple.png"alt="眠りアメ"class="ame-image">
-              <h2>よく眠れました</h2>
-              <p>ずっと不眠症で悩んでいましたが、寝る前にこれを食べるように
-              なってからはよく眠れています。</p>
-              <a href="v1.html"><p class="btn4">詳細はこちら</a></p></li>
-              <li><img src="images/orange.png" alt="元気アメ"class="ame-image">
-              <h2>元気とは？？</h2>
-              <p>全然元気になりません。</p>
-              <a href="v2.html"><p class="btn4">詳細はこちら</a></p></li>
-              <li><img src="images/blue.png" alt="飛行アメ"class="ame-image">
-              <h2>ほんとに飛べました！</h2>
-              <p>どうせ無理だろうと思っていましたが、
-                ほんとに飛べてびっくりしました！</p>
-              <a href="v3.html"><p class="btn4">詳細はこちら</a></p></li>
-              <li><img src="images/ame.png" alt="喜怒哀楽セット"class="ame-image">
-              <h2>仲良くなれました</h2>
-              <p>今まで世間話が中々できていなかった方ともこれのおかげで
-              楽しくおしゃべりできました。</p>
-              <a href="v4.html"><p class="btn4">詳細はこちら</a></p></li>
-            </div>
-          </section>
-        </div>
-
         <aside class="sidebar">
           <section>
             <h2>定番商品</h2>
@@ -84,6 +61,24 @@
             </ul>
           </section>
         </aside>
+        <div class="main-center">
+          <h1>仲良くなれました</h1>
+          <section class="ame clearfix">
+            <div class="ame-txt">
+              <img src="images/ame.png" alt="喜怒哀楽セット"class="ame-image">
+              <h2 class="icon">コメント</h2>
+              <p>20代女性
+              <br>★★★★☆
+              <br>
+            　<br>今まで世間話が中々できていなかった方ともこれのおかげで
+            楽しくおしゃべりできました。これからもっと仲良くなれそうです！
+          ありがとうございます。</p>
+            </div>
+
+            <p class="btn"><a href="set1.html">喜怒哀楽セット</a></p>
+          </section>
+        </div>
+        <p class="btn3"><a href="voice.html">＜戻る＞</a></p>
       </div>
     </div>
     <!-- wrap終わり-->
