--- a/about.html
+++ b/about.html
@@ -31,16 +31,43 @@
     <!-- wrap始まり-->
     <div id="wrap">
       <div class="content">
+
+        <aside class="sidebar">
+          <section>
+            <h2>定番商品</h2>
+            <ul>
+              <li><a href="classic.html"#1>喜怒哀楽シリーズ</a></li>
+              <li><a href="classic.html"#2>一休みシリーズ</a></li>
+              <li><a href="classic.html"#3>気分転換シリーズ</a></li>
+            </ul>
+          </section>
+          <section>
+            <h2>特別商品</h2>
+            <ul>
+              <li><a href="special.html"#1>夢シリーズ</a></li>
+              <li><a href="special.html"#1>スキンケアシリーズ</a></li>
+              <li><a href="special.html"#1>勉強シリーズ</a></li>
+            </ul>
+          </section>
+          <section>
+            <h2>期間限定商品</h2>
+            <ul>
+              <li><a href="season.html"#1>冬季限定</a></li>
+              <li><a href="season.html"#2>クリスマス限定</a></li>
+            </ul>
+          </section>
+        </aside>
+
         <div class="main-center">
           <h2 class="icon">Fancy Candyとは</h2>
           <p>みなさんは、アメにどのような印象をお持ちですか？
             <br>大阪のおばちゃんが配っていたり、会議の際に机に置かれていることを
-            イメージする方は多いのではないでしょうか。<br>このようなちょっとした
-            時間に食べることが多いと思います。<br>この時間をより楽しい時間にする
+            イメージする方は多いのではないでしょうか。このようなちょっとした
+            時間に食べることが多いと思います。この時間をより楽しい時間にする
             アメを多く販売しています。</p>
           <h2 class="icon">当サイトについて</h2>
-          <p>当サイトでは、架空のアメを販売しています。<br>架空ならではの夢のある
-            商品を多く扱っています。<br>皆様がより楽しい日常を送ることを願ってい
+          <p>当サイトでは、架空のアメを販売しています。架空ならではの夢のある
+            商品を多く扱っています。皆様がより楽しい日常を送ることを願ってい
             ます！</p>
           <h2 class="icon">商品へのこだわり</h2>
           <p>ピュアで健康な、本当に安心して楽しめる、そんな美味しいアメをお届け
