--- a/buy.html
+++ b/buy.html
@@ -3,8 +3,6 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport:" content="width=device-width,initial-scale=1">
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="menu.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&display=swap"
      rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -18,23 +16,19 @@
       <a href="top.html">
       <img src="images/logo.png" alt="Fancy Candy"></a>
       </div>
-      <div class="navButton">
-        <span class="navButton-line"></span>
-        <span class="navButton-line"></span>
-        <span class="navButton-line"></span>
-      </div>
+      <nav>
+        <ul class="global-nav">
+          <li><a href="about.html">Fancy Candyとは</a></li>
+          <li><a href="product.html">商品紹介</a></li>
+          <li><a href="news.html">ニュース</a></li>
+          <li><a href="voice.html">お客様の声</a></li>
+          <li><a href="event.html">イベント</a></li>
+        </ul>
+      </nav>
     </header>
     <!-- header終わり-->
 
-    <nav>
-      <ul class="menu">
-        <li><a href="about.html">Fancy Candyとは</a></li>
-        <li><a href="product.html">商品紹介</a></li>
-        <li><a href="news.html">ニュース</a></li>
-        <li><a href="voice.html">お客様の声</a></li>
-        <li><a href="event.html">イベント</a></li>
-      </ul>
-    </nav>
+
 
     <!-- wrap始まり-->
     <div id="wrap">
