--- a/classic.html
+++ b/classic.html
@@ -46,7 +46,7 @@
               <p class="btn2">涙アメ</a></p></li>
               <li><a href="smile.html"><img src="images/orange.png"alt="">
               <p class="btn2">笑いアメ</a></p></li>
-              <li><a href="cry.html"><img src="images/ame.png"alt="">
+              <li><a href="set1.html"><img src="images/ame.png"alt="">
               <p class="btn2">喜怒哀楽セット</a></p></li>
             </ul>
           </section>
