--- a/event.html
+++ b/event.html
@@ -31,34 +31,41 @@
     <!-- wrap始まり-->
     <div id="wrap" class="clearfix">
       <div class="content">
-        <div class="main">
-          <h1>EVENT</h1>
-          <p>セール開催中</p>
-          <section>
-            <h2><a href="sale"><img src="images/sale.jpg"alt="sale"></a></h2>
-            <p>今の時期に合わせたセールを多数開催中！最大50％オフ<a href="sale.html">詳しく見る≫</a></p>
-          </section>
-          <section>
-            <h2><a href="want"><img src="images/want.jpg"alt="want"></a></h2>
-            <p>あなたの欲しいアメを実現します！
-            <a href="want.html">詳しく見る≫</a></p>
-          </section>
-        </div>
+
         <aside class="sidebar">
           <section>
-            <h2>SELE</h2>
+            <h2>定番商品</h2>
             <ul>
-              <li><a href="sale.html#rain">梅雨セール</a></li>
-              <li><a href="sale.html#father">父の日セール</a></li>
+              <li><a href="classic.html"#1>喜怒哀楽シリーズ</a></li>
+              <li><a href="classic.html"#2>一休みシリーズ</a></li>
+              <li><a href="classic.html"#3>気分転換シリーズ</a></li>
             </ul>
           </section>
           <section>
-            <h2>WANT</h2>
+            <h2>特別商品</h2>
             <ul>
-              <li><a href="want.html#candy">応募ページ</a></li>
+              <li><a href="special.html"#1>夢シリーズ</a></li>
+              <li><a href="special.html"#1>スキンケアシリーズ</a></li>
+              <li><a href="special.html"#1>勉強シリーズ</a></li>
+            </ul>
+          </section>
+          <section>
+            <h2>期間限定商品</h2>
+            <ul>
+              <li><a href="season.html"#1>冬季限定</a></li>
+              <li><a href="season.html"#2>クリスマス限定</a></li>
             </ul>
           </section>
         </aside>
+
+        <div class="main-center">
+          <h2 class="icon">セール</h2>
+            <p>今の時期に合わせたセールを開催中！最大50％オフ
+              <br><a href="sale.html">詳しく見る≫</a></p>
+          <h2 class="icon">欲しいアメを再現</h2>
+            <p>あなたの欲しいアメを実現します！
+            <br><a href="want.html">詳しく見る≫</a></p>
+        </div>
       </div>
     </div>
     <!-- wrap終わり-->
