--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <title>Fancy Candy</title>
     <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&display=swap"
      rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
   </head>
   <body id="index">
 
     <!-- header始まり-->
     <header>
       <h1>当Webサイトは、架空のアメ専門店です。</h1>
-      <p>実際の販売は行っておらず、架空のものとして楽しで頂けたらと思います。</p>
+      <p>実際の販売は行っておりませんので、
+        架空のものとして楽しで頂けたらと思います。</p>
       <p class="btn"><a href="top.html">Fancy Candy</a></p>
     </header>
     <!-- header終わり-->
