--- a/jiman.html
+++ b/jiman.html
@@ -68,7 +68,7 @@
               <img src="images/pink.png" alt="自慢アメ"class="ame-image">
               <h2 class="icon">概要</h2>
               <p>一番直近の自慢したい出来事を１つ勝手に話してしまいます。
-              <br>アメのせいだといって、堂々と自慢できるチャンスですよ♪</p>
+                アメのせいだといって、堂々と自慢できるチャンスですよ♪</p>
               <h2 class="icon">味</h2>
               <p>いちご</p>
               <h2 class="icon">成分</h2>
