--- a/news.html
+++ b/news.html
@@ -31,14 +31,44 @@
     <!-- wrap始まり-->
     <div id="wrap">
       <div class="content">
-        <h1>夏季限定商品発売中</h1>
-        <p>今年の夏季限定商品が発売開始されました。
-          <br>暑くて辛いそんな夏を楽しめる涼しくておもしろいアメを販売しております！</p>
-        <p class="btn"><a href="2.html">商品紹介</a></p>
+
+        <aside class="sidebar">
+          <section>
+            <h2>定番商品</h2>
+            <ul>
+              <li><a href="classic.html"#1>喜怒哀楽シリーズ</a></li>
+              <li><a href="classic.html"#2>一休みシリーズ</a></li>
+              <li><a href="classic.html"#3>気分転換シリーズ</a></li>
+            </ul>
+          </section>
+          <section>
+            <h2>特別商品</h2>
+            <ul>
+              <li><a href="special.html"#1>夢シリーズ</a></li>
+              <li><a href="special.html"#1>スキンケアシリーズ</a></li>
+              <li><a href="special.html"#1>勉強シリーズ</a></li>
+            </ul>
+          </section>
+          <section>
+            <h2>期間限定商品</h2>
+            <ul>
+              <li><a href="season.html"#1>冬季限定</a></li>
+              <li><a href="season.html"#2>クリスマス限定</a></li>
+            </ul>
+          </section>
+        </aside>
+
+        <div class="main-center">
+        <h1>冬季限定商品発売中</h1>
+        <p>今年の冬季限定商品が発売開始されました。
+          <br>寒くて辛いそんな冬を楽しめるおもしろいアメを販売しております！
+        クリスマスに役立つシリーズもありますのでぜびご覧ください。</p>
+        <p class="btn"><a href="season.html">商品紹介</a></p>
         <h1>Fancy Candy公式サイトオープン</h1>
         <p>Fancy Candy公式サイトがついに開設されました。定番の商品だけでなく
         季節に合わせた商品も販売しております。実際にご購入されたお客様の声も
         知ることができるので安心です！<br>これからよろしくお願いいたします。！！</p>
+        </div>
       </div>
     </div>
     <!-- wrap終わり-->
