--- a/product.html
+++ b/product.html
@@ -31,6 +31,34 @@
     <!-- wrap始まり-->
     <div id="wrap">
       <div class="content">
+
+        <aside class="sidebar">
+          <section>
+            <h2>定番商品</h2>
+            <ul>
+              <li><a href="classic.html"#1>喜怒哀楽シリーズ</a></li>
+              <li><a href="classic.html"#2>一休みシリーズ</a></li>
+              <li><a href="classic.html"#3>気分転換シリーズ</a></li>
+            </ul>
+          </section>
+          <section>
+            <h2>特別商品</h2>
+            <ul>
+              <li><a href="special.html"#1>夢シリーズ</a></li>
+              <li><a href="special.html"#1>スキンケアシリーズ</a></li>
+              <li><a href="special.html"#1>勉強シリーズ</a></li>
+            </ul>
+          </section>
+          <section>
+            <h2>期間限定商品</h2>
+            <ul>
+              <li><a href="season.html"#1>冬季限定</a></li>
+              <li><a href="season.html"#2>クリスマス限定</a></li>
+            </ul>
+          </section>
+        </aside>
+
+        <div class="main-center">
         <h1>定番商品</h1>
         <p>感情などを一時的に変化させることのできるアメを多くとり揃えています。
           ちょっとした休憩や友達と楽しみのにピッタリなものばかりです！</p>
@@ -46,6 +74,7 @@
           大量生産しない商品もありますので、興味のあるものはすぐ購入されることを
           お勧めします！</p>
         <p class="btn"><a href="season.html">期間限定商品一覧</a></p>
+        </div>
       </div>
     </div>
     <!-- wrap終わり-->
