--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
     <!-- javascript始まり -->
     <canvas class="background"></canvas>
     <script src="https://cdn.jsdelivr.net/npm/bubbly-bg@1.0.0/dist/bubbly-bg.js"></script>
-    <script>bubbly();</script>
+    <script>bubbly({
+      colorStart: '#fff4e6',
+      colorStop: '#ffe9e4',
+      blur:1,
+      compose: 'source-over',
+      bubbleFunc:() => `hsla(${Math.random() * 50}, 100%, 50%, .3)`
+    });</script>
 
     <!-- javascript終わり -->
 
