--- a/language.html
+++ b/language.html
@@ -83,7 +83,7 @@
             <p class="btn"><a href="buy.html">購入</a></p>
           </section>
         </div>
-        <p class="btn3"><a href="product.html">＜戻る＞</a></p>
+        <p class="btn3"><a href="special.html">＜戻る＞</a></p>
       </div>
     </div>
     <!-- wrap終わり-->
