--- a/want.html
+++ b/want.html
@@ -31,10 +31,12 @@
     <!-- wrap始まり-->
     <div id="wrap">
       <div class="content">
-        <h1>夢のような体験</h1>
-        <p>皆様の『したい』を実現します！
-          <br>※このWebサイトは、架空のアメ専門店です。</p>
+        <h1>あなたの欲しいアメを作ります！</h1>
+        <p>皆様からのご意見を参考にアメの開発や詰合せ、ギフトセット等
+          制作していこうと考えております。
+        <br>皆様からのご意見お待ちしております！</p>
         <p class="btn"><a href="product.html">商品紹介</a></p>
+        <p class="btn3"><a href="event.html">＜戻る＞</a></p>
       </div>
     </div>
     <!-- wrap終わり-->
