--- a/event.html
+++ b/event.html
@@ -61,10 +61,11 @@
         <div class="main-center">
           <h2 class="icon">セール</h2>
             <p>今の時期に合わせたセールを開催中！最大50％オフ
-              <br><a href="sale.html">詳しく見る≫</a></p>
+              <p class="btn"><a href="season.html">詳しくはこちら</a></p>
           <h2 class="icon">欲しいアメを再現</h2>
             <p>あなたの欲しいアメを実現します！
-            <br><a href="want.html">詳しく見る≫</a></p>
+              他にも詰合せでの販売やギフト対応も致しますのでご意見お待ちしております。
+              <p class="btn"><a href="want.html">詳しくはこちら</a></p>
         </div>
       </div>
     </div>
